Fixes lightgrey variable, footer spacing

--- a/skins/Wilds2025/resources/components/footer.less
+++ b/skins/Wilds2025/resources/components/footer.less
@@ -1,4 +1,8 @@
 .mw-footer {
   position: relative;
   z-index: 0;
+  padding-top: @spacing-md;
+
+  color: @lightgrey;
+  font-size: 80%;
 }
