--- a/skins/Wilds2025/resources/components/header.less
+++ b/skins/Wilds2025/resources/components/header.less
@@ -87,7 +87,7 @@
     background: @grey;
 
     .special-label {
-      color: @ligthgrey;
+      color: @lightgrey;
     }
 
     .special-query {
