--- a/skins/Wilds2025/resources/components/sub-menu.less
+++ b/skins/Wilds2025/resources/components/sub-menu.less
@@ -53,7 +53,7 @@
       width: 100%;
       border-bottom: solid 1px @grey;
       margin-bottom: @spacing-sm;
-      color: @ligthgrey;
+      color: @lightgrey;
 
       &:first-child {
         padding-top: 0;
