--- a/skins/Wilds2025/resources/variables.less
+++ b/skins/Wilds2025/resources/variables.less
@@ -9,7 +9,7 @@
 @black: #000;
 @darkgrey: #222;
 @grey: #444;
-@ligthgrey: #aaa;
+@lightgrey: #aaa;
 @lightergrey: #ccc;
 @green: #64D278;
 @green-2: #94F5AA;
